Initial project setup with Git LFS tracking
Feat: Initial Unreal Engine project setup
- Added base project structure
- Configured Git LFS for large Unreal assets
- Added .gitignore and .gitattributes
- Committed initial project files

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,15 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Unreal Engine Generated Files
+enc_temp_folder/*
+
+# Logs and temporary files
+*.log
+*.temp
+*.tmp
+
+# C++ Debugging Symbols
+*.pdb
+*.idb
