Player and GameMode Setup
- Created a new GameMode class.
- Created a Blueprint from the GameMode class.
- Reference Blueprint in project settings. (In Maps section).
- Referenced player in project settings. (In Maps section).

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Main/Main.Main
+EditorStartupMap=/Game/Maps/Main/Main.Main
+GlobalDefaultGameMode=/Game/Game/Blueprints/GameModes/BP_MyFarmGame_GameModeBase.BP_MyFarmGame_GameModeBase_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
